create a separate method getConstraintMapping()